<resources>
    <string name="app_name">Drone RISV</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: 4.0.1</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="open_btn">Open</string>
    <string name="title_activity_map">Map</string>
    <string name="altitude">Altitude</string>
    <string name="gps_position">GPS position</string>
    <string name="change_mode">Change Mode</string>
    <string name="follow_mode">Follow mode</string>
    <string name="land_mode">Land mode</string>
    <string name="map">Map</string>
    <string name="stop">Stop</string>
    <string name="is_flying">Is flying :</string>
    <string name="false_txt">false</string>
    <string name="car_crash">Car crash</string>
    <string name="pitch">Velocity X :</string>
    <string name="roll">Velocity Y :</string>
    <string name="yaw">Velocity Z :</string>
    <string name="restart">Restart</string>
    <string name="flightTime">Total flight time : </string>
    <string name="start">Start</string>
    <string name="rec">Rec</string>
    <string name="satellite">Satellite</string>
    <string name="signal_gps">Signal GPS</string>
    <string name="takeoff">Takeoff</string>
    <string name="land">Land</string>
    <string name="take_photo">take photo</string>
    <string name="battery">Battery :</string>
    <string name="percent">0%</string>
    <string name="drone_position">Drone Position</string>
    <string name="phone_position">Phone Position</string>
    <string name="Log">Log</string>
    <string name="current_mission">Current mission :</string>
    <string name="no_mission">No mission</string>
    <string name="distance">Distance :</string>
    <string name="iso">ISO</string>
    <string name="_0">0</string>
    <string name="home_position">Home position</string>
</resources>
