<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="renault.drone.dronerisv.MainActivity">

    <TextureView
        android:id="@+id/video_previewer_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <renault.drone.risvrenault.FollowQRCode
        android:id="@+id/cameraZone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <!--<Button-->
    <!--android:id="@+id/btn_stop"-->
    <!--android:layout_width="@dimen/btn_width"-->
    <!--android:layout_height="@dimen/btn_height"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_margin="@dimen/btn_margin"-->
    <!--android:text="@string/stop"-->
    <!--android:textColor="@color/colorRed"-->
    <!--android:textSize="12sp" />-->

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:checked="false"
        android:textColor="@color/colorRed"
        android:text="@string/stop"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_car_crash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/btn_margin"
        android:layout_toStartOf="@+id/btn_mode"
        android:text="@string/car_crash"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <!--<Button-->
        <!--android:id="@+id/btn_map"-->
        <!--android:layout_width="@dimen/btn_width"-->
        <!--android:layout_height="@dimen/btn_height"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_margin="@dimen/btn_margin"-->
        <!--android:text="@string/map"-->
        <!--android:textSize="12sp" />-->

    <ToggleButton
        android:id="@+id/btn_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:layout_alignParentEnd="true"
        android:text="@string/change_mode"
        android:textOff="@string/follow_mode"
        android:textColor="@color/colorWhite"
        android:textOn="@string/land_mode"
        android:layout_marginEnd="11dp"
        android:textSize="12sp" />


    <LinearLayout
        android:id="@+id/signalAndSatellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/video_previewer_surface"
        android:layout_gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/satellite"
            android:textColor="#ffffff"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:id="@+id/signalGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/signal_gps"
            android:textColor="#ffffff" />
    </LinearLayout>

    <TextView
        android:id="@+id/currentAltitudeSinceStart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signalAndSatellite"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/altitude"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/altitude"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentAltitudeSinceStart"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/altitude"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textPositionDrone"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_stop"
        android:layout_below="@+id/btn_stop"
        android:text="Drone Position"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/positionGPS"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_stop"
        android:layout_below="@+id/textPositionDrone"
        android:layout_marginBottom="15dp"
        android:text="@string/gps_position"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textPhonePosition"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_stop"
        android:layout_below="@+id/positionGPS"
        android:text="Phone Position"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/phonePositionGPS"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_stop"
        android:layout_below="@+id/textPhonePosition"
        android:layout_marginBottom="15dp"
        android:text="@string/gps_position"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/isFlying"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_stop"
        android:layout_below="@+id/phonePositionGPS"
        android:text="@string/is_flying"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/isFlyingBool"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_stop"
        android:layout_below="@+id/isFlying"
        android:layout_marginBottom="15dp"
        android:text="@string/false_txt"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/velocityXTxt"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_mode"
        android:layout_below="@+id/btn_mode"
        android:text="@string/pitch"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/velocityX"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_mode"
        android:layout_below="@+id/velocityXTxt"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/velocityYTxt"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_mode"
        android:layout_below="@+id/velocityX"
        android:text="@string/roll"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/velocityY"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_mode"
        android:layout_below="@+id/velocityYTxt"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/velocityZTxt"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_mode"
        android:layout_below="@+id/velocityY"
        android:text="@string/yaw"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/velocityZ"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_mode"
        android:layout_below="@+id/velocityZTxt"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/FlightTimeTxt"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_mode"
        android:layout_below="@+id/velocityZ"
        android:text="@string/flightTime"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/flightTime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_mode"
        android:layout_below="@+id/FlightTimeTxt"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textColor="#ffffff" />

    <!--<ToggleButton-->
        <!--android:id="@+id/btn_rec"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="@dimen/btn_height"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginEnd="11dp"-->
        <!--android:checked="false"-->
        <!--android:textColor="@color/colorRed"-->
        <!--android:textOff="@string/rec"-->
        <!--android:textOn="@string/stop"-->
        <!--android:textSize="12sp" />-->

    <!--<Button-->
        <!--android:id="@+id/btn_photo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="@dimen/btn_height"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:textSize="12sp"-->
        <!--android:text="@string/take_photo"-->
        <!--android:layout_alignBottom="@+id/btn_rec"-->
        <!--android:layout_toStartOf="@+id/btn_rec" />-->

    <Button
        android:id="@+id/btn_takeoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:text="@string/takeoff"
        android:layout_marginBottom="15dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_land"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:text="@string/land"
        android:layout_marginBottom="15dp"
        android:visibility="gone"
        android:textSize="12sp" />



</RelativeLayout>